[project]
name = "confidence-intervals-for-time-series-forecasts-with-python"
version = "0.1.0"
description = "Companion code for Medium article: confidence intervals for time series forecasts with python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pmdarima>=2.0.4",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
